--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -130,6 +131,11 @@ img.reset {
     align-items: center;
 }
 
+footer {
+    display: flex;
+    justify-content: center;
+}
+
 .devices-status {
     position: absolute;
     bottom: 3%;
@@ -157,9 +163,11 @@ img.reset {
     0% {
         transform: scale(1);
     }
+
     50% {
         transform: scale(1.1);
     }
+
     100% {
         transform: scale(1);
     }
